[gd_scene load_steps=41 format=2]

[ext_resource path="res://Scene/MovingIce.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Scene/EskimoNew.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imagens/water_green.png" type="Texture" id=4]
[ext_resource path="res://Imagens/snow.jpg" type="Texture" id=5]
[ext_resource path="res://Scene/Igloo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Imagens/aurora.png" type="Texture" id=7]
[ext_resource path="res://Script/ControlEnemy.gd" type="Script" id=8]
[ext_resource path="res://Scene/Particules/Waves.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Script/HUD.gd" type="Script" id=11]
[ext_resource path="res://Script/Open.gd" type="Script" id=12]
[ext_resource path="res://Script/ShaderControl.gd" type="Script" id=13]
[ext_resource path="res://Scene/WakingBear.tscn" type="PackedScene" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.540499, 0.57484, 1.23239 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.527812, 1.61747, 0.376314 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.375785, 0.316127, 0.528604 )

[sub_resource type="Animation" id=4]
resource_name = "Death_Player"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Skin:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -4.06691, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Enter_Igloo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Skin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 0.435275 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 92, 180, 0 ), Vector3( 92, 180, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Skin:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 0.307786, 0.277392 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.0750122, 0, 0 ), Vector3( 0.0750122, 0.821023, 0 ), Vector3( 0.0750122, 0.653569, 0 ), Vector3( 0.0750122, 0.653569, -5.0976 ) ]
}

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 4.12438, 0, 0, Vector2( 1, 0.0828221 ), -3.88697, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
direction = Vector3( 0, 1, 0 )
spread = 170.68
gravity = Vector3( 0, -20, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.1
tangential_accel = 3.27
tangential_accel_random = 0.15
scale = 0.5
scale_random = 0.95
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )

[sub_resource type="Shader" id=13]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;
uniform float time = 1f;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec4 albedo_tex = texture(texture_albedo,vec2(UV.x + cos(UV.y * 10.0 + time * 0.9	) * 0.2, UV.y +sin(UV.x * 10.0 + time * 0.9) * 0.2));
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/albedo = Color( 0.454902, 0.47451, 0.886275, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 3, 3, 4 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/time = 1.0
shader_param/texture_albedo = ExtResource( 4 )

[sub_resource type="PlaneMesh" id=15]
material = SubResource( 14 )
size = Vector2( 50, 30 )

[sub_resource type="Shader" id=16]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;
uniform float time;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	
	if(VERTEX.z > 5.0){
		VERTEX.z += sin(VERTEX.x * 50.05 + TIME * 0.7) * .2;
		VERTEX.y = sin(VERTEX.x * 10.09 + TIME  * 2.0) * .3;
	}
}

void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/albedo = Color( 0.87451, 0.996078, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 0.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/time = 1.0

[sub_resource type="CubeMesh" id=18]
material = SubResource( 17 )
size = Vector3( 60, 0.6, 12 )
subdivide_width = 100
subdivide_depth = 10

[sub_resource type="BoxShape" id=19]
extents = Vector3( 18.4907, 0.240355, 4.14863 )

[sub_resource type="ParticlesMaterial" id=20]
emission_shape = 2
emission_box_extents = Vector3( 20, 20, 20 )
direction = Vector3( -1, 0, 0 )
initial_velocity = 5.0
scale = 0.3

[sub_resource type="SpatialMaterial" id=21]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=22]
material = SubResource( 21 )

[sub_resource type="Shader" id=23]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;
uniform float time = 1f;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
		vec4 albedo_tex = texture(texture_albedo,vec2(UV.x + cos(UV.y * 10.0 + time * 0.9	) * 0.2, UV.y +sin(UV.x * 10.0 + time * 0.9) * 0.2));
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=24]
shader = SubResource( 23 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0.993, 1, 1 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/time = 1.0
shader_param/texture_albedo = ExtResource( 7 )

[sub_resource type="PlaneMesh" id=25]
material = SubResource( 24 )

[sub_resource type="DynamicFont" id=26]
size = 20
font_data = ExtResource( 10 )

[node name="Tests" type="Spatial"]
script = ExtResource( 12 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.875052, 0.484029, 0, -0.484029, 0.875052, 0, 14.838, 17.0078 )
keep_aspect = 0
fov = 50.0
size = 30.7244
near = 0.01
far = 50.9
__meta__ = {
"_editor_description_": ""
}

[node name="Enimeis" type="Spatial" parent="."]

[node name="ControlEnemy" type="Spatial" parent="."]
script = ExtResource( 8 )
container = NodePath("../Enimeis")

[node name="MovingIce01" parent="ControlEnemy" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -0.107696, 0 )
velocity = 2
direction = -1

[node name="MovingIce02" parent="ControlEnemy" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -0.107696, -4 )
velocity = 2
level = 1

[node name="MovingIce03" parent="ControlEnemy" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -0.107696, -8 )
velocity = 2
direction = -1
level = 2

[node name="MovingIce04" parent="ControlEnemy" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -0.107696, -12 )
level = 3

[node name="Player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
script = ExtResource( 2 )

[node name="Body" type="Spatial" parent="Player"]

[node name="AreaFeet" type="Area" parent="Player/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0612803, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Player/Body/AreaFeet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00141541, 0.00120181, -0.0415688 )
shape = SubResource( 1 )

[node name="Skin" type="Spatial" parent="Player/Body"]
pause_mode = 2

[node name="EskimoNew" parent="Player/Body/Skin" instance=ExtResource( 3 )]

[node name="AreaEnemy" type="Area" parent="Player/Body"]
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Player/Body/AreaEnemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35185, 0 )
shape = SubResource( 2 )

[node name="AreaDoorDetector" type="Area" parent="Player/Body"]
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Player/Body/AreaDoorDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0604286, 0.479676, 0.0332279 )
shape = SubResource( 3 )

[node name="Waves" parent="Player/Body" instance=ExtResource( 9 )]

[node name="Tween" type="Tween" parent="Player"]

[node name="Animation" type="AnimationPlayer" parent="Player"]
pause_mode = 2
anims/Death_Player = SubResource( 4 )
anims/Enter_Igloo = SubResource( 5 )

[node name="Splash" type="Particles" parent="Player"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.96077, 0.283 )
emitting = false
amount = 150
lifetime = 2.03
one_shot = true
explosiveness = 1.0
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 12 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Player"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.999007, 0, 0.044561, 0, 1, 0, -0.044561, 0, 0.999007, 0, 1.16708, 5.04448 )
light_energy = 0.05
light_indirect_energy = 0.09
light_specular = 0.0

[node name="Water" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Water"]
transform = Transform( 2.22248, 0, 0, 0, 1.03589, 0, 0, 0, -3.82063, 0.0194855, -0.245431, 12.5046 )
mesh = SubResource( 15 )
material/0 = null

[node name="Snow" type="Spatial" parent="."]
transform = Transform( 1.61903, 0, 0, 0, 1, 0, 0, 0, 1.60334, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Snow"]
transform = Transform( -0.744675, 0, 0, 0, 0.912761, 0, 0, 0, 1.27309, -0.899723, -0.325677, -16.5547 )
mesh = SubResource( 18 )
material/0 = null

[node name="Area" type="Area" parent="Snow"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Snow/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18.7818 )
shape = SubResource( 19 )

[node name="SnowStorm" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.9072, 0 )

[node name="Particles" type="Particles" parent="SnowStorm"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38199, -6.0291, -5.70712 )
amount = 200
lifetime = 1.03
preprocess = 2.0
visibility_aabb = AABB( -12.004, -2.26593, -4.60303, 24.008, 4.53186, 9.20605 )
process_material = SubResource( 20 )
draw_pass_1 = SubResource( 22 )

[node name="Igloo" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.61193, 0.258939, -23.4985 )

[node name="Aurora" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.918934, -31.6127 )

[node name="MeshInstance" type="MeshInstance" parent="Aurora"]
transform = Transform( 49.0683, 0, 0, 0, 1.92847, -5.13227, 0, 1.18688, 0.445979, 0.178482, 1.11565, -0.145126 )
mesh = SubResource( 25 )
material/0 = null

[node name="HUD" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 11 )

[node name="Score" type="Label" parent="HUD"]
margin_left = 2.86475
margin_top = 6.29714
margin_right = 285.865
margin_bottom = 36.2971
custom_fonts/font = SubResource( 26 )
text = "9999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="HUD"]
margin_left = 31.1892
margin_top = 32.2971
margin_right = 142.189
margin_bottom = 63.2971
custom_fonts/font = SubResource( 26 )
text = "45º"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifes" type="Label" parent="HUD"]
margin_left = 193.027
margin_top = 32.2971
margin_right = 283.027
margin_bottom = 63.2971
custom_fonts/font = SubResource( 26 )
text = "45º"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBlack" type="ColorRect" parent="."]
margin_right = 1032.0
margin_bottom = 610.0
color = Color( 0.129412, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShaderControl" type="Spatial" parent="."]
pause_mode = 2
script = ExtResource( 13 )
meshes = [ NodePath("../Water/MeshInstance"), NodePath("../Snow/MeshInstance"), NodePath("../Aurora/MeshInstance") ]

[node name="WakingBear" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.2981, 0.9017, -16.0328 )

[connection signal="area_entered" from="Player/Body/AreaFeet" to="Player" method="_on_AreaFeet_area_entered"]
[connection signal="area_exited" from="Player/Body/AreaFeet" to="Player" method="_on_AreaFeet_area_exited"]
[connection signal="area_entered" from="Player/Body/AreaEnemy" to="Player" method="_on_AreaEnimy_area_entered"]
[connection signal="area_entered" from="Player/Body/AreaEnemy" to="Player" method="_on_AreaEnemy_area_entered"]
[connection signal="area_entered" from="Player/Body/AreaDoorDetector" to="Player" method="_on_AreaDoorDetector_area_entered"]
[connection signal="area_exited" from="Player/Body/AreaDoorDetector" to="Player" method="_on_AreaDoorDetector_area_exited"]
[connection signal="camera_exited" from="Player/VisibilityNotifier" to="Player" method="_on_VisibilityNotifier_camera_exited"]
